--- a/s05/index.html
+++ b/s05/index.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./index.scss">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <div class="button">d</div>
-    <div class="start">start</div>
-
-
+    <div class="dd">이거만들었다 ㅋㅋㅋㅋ</div>
+    <script src="./index.js" type="module"></script>
 </body>
 
 </html>
